# rust-stm32f4-discovery

./: Cargo.toml  README.md  memory.x
examples/led/: main.rs
src/: lib.rs  lis302dl.rs  main.rs  spi.rs
