[package]
authors = ["inokawa <48897392+inokawa@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
name = "rust-stm32f4-discovery"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"

[dependencies.stm32f4]
features = ["stm32f407", "rt"]
version = "0.12.1"

[[bin]]
name = "rust-stm32f4-discovery"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
